# Projet3

./: A_faire  P3_template_modelistation_supervisee_data_scientist.ipynb  commande-kernel.sh  pyproject.toml
