[project]
name = "projet-3"
version = "0.1.0"
description = ""
authors = [
    {name = "APinsun",email = "arnaudpinsun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
