[project]
name = "projet-3"
version = "0.1.0"
description = ""
authors = [
    {name = "APinsun",email = "arnaudpinsun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "ydata-profiling (>=4.18.0,<5.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "phik (>=0.12.5,<0.13.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
